kubernetes/expressjsdemo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: expressjsdemo
  labels:
    app: expressjsdemo
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: expressjsdemo
  type: LoadBalancer
